--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.7.*",
+        "urameshibr/lumen-form-request": "^1.5",
         "vlucas/phpdotenv": "~2.2",
         "vluzrmos/tinker": "^1.4"
     },
