--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "~1.0",
+        "phpmd/phpmd": "@stable",
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "classmap": [
