--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.7.*",
         "urameshibr/lumen-form-request": "^1.5",
         "vlucas/phpdotenv": "~2.2",
-        "vluzrmos/tinker": "^1.4"
+        "vluzrmos/tinker": "^1.4",
+        "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
